<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.bnsantos.offline.ui.activities.UserActivity">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/user_id_s"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp"
      app:layout_constraintEnd_toStartOf="@+id/id"
      android:layout_marginEnd="8dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="16dp"
      android:id="@+id/textView3"
      app:layout_constraintHorizontal_bias="0.867"/>
  <EditText
      android:id="@+id/id"
      android:layout_width="200dp"
      android:layout_height="45dp"
      android:layout_marginTop="8dp"
      android:enabled="false"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/user_name_s"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/name"
      android:layout_marginTop="28dp"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintHorizontal_bias="0.866"
      android:id="@+id/textView4"/>
  <EditText
      android:id="@+id/name"
      android:layout_width="200dp"
      android:layout_height="45dp"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/id"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/user_email_s"
      android:textStyle="bold"
      android:id="@+id/textView2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      android:layout_marginTop="36dp"
      app:layout_constraintEnd_toStartOf="@+id/email"
      app:layout_constraintHorizontal_bias="0.875"/>
  <EditText
      android:id="@+id/email"
      android:layout_width="200dp"
      android:layout_height="45dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/name"
      app:layout_constraintEnd_toEndOf="parent"/>

  <Button
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp"
      app:layout_constraintEnd_toStartOf="@+id/clear"
      android:layout_marginEnd="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="16dp"
      app:layout_constraintHorizontal_bias="0.267"/>

  <Button
      android:id="@+id/clear"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/new_user"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>